# benchmarking_3dcpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
benchmarking_3dcpp/: CMakeLists.txt  package.xml
benchmarking_3dcpp/config/: config.yaml
benchmarking_3dcpp/include/benchmarking_3dcpp/: benchmarking_3dcpp.hpp  common_types.hpp  coverage_types.hpp  geometry_types.hpp  scene.hpp  types.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/alg/: coverage_algorithm.hpp  nuc.hpp  yang2023template.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/client/: client.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/cuda/: cuda_kernels.cuh
benchmarking_3dcpp/include/benchmarking_3dcpp/eval/: coverage_evaluator.hpp  surface_sampler.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/robot_model/: line_lidar.hpp  robot_model.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/server/: server.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/utils/: h5_helper.hpp
benchmarking_3dcpp/include/benchmarking_3dcpp/viz/: benchmarking_viz.hpp
benchmarking_3dcpp/output/: inspect_h5.py
benchmarking_3dcpp/rviz/: benchmarking_3dcpp.rviz
benchmarking_3dcpp/src/: benchmarking_3dcpp.cpp  benchmarking_3dcpp_node.cpp  geometry_types.cpp  pcd_to_mesh.cpp
benchmarking_3dcpp/src/alg/: nuc.cpp  yang2023template.cpp
benchmarking_3dcpp/src/client/: client.cpp
benchmarking_3dcpp/src/cuda/: cuda_kernels.cu
benchmarking_3dcpp/src/eval/: coverage_evaluator.cpp  surface_sampler.cpp
benchmarking_3dcpp/src/robot_model/: line_lidar.cpp  robot_model.cpp
benchmarking_3dcpp/src/server/: server.cpp
benchmarking_3dcpp/src/utils/: h5_helper.cpp
benchmarking_3dcpp/src/viz/: benchmarking_viz.cpp
benchmarking_3dcpp_interfaces/: CMakeLists.txt  package.xml
benchmarking_3dcpp_interfaces/msg/: ControlPoint.msg  SplineSurface.msg
benchmarking_3dcpp_interfaces/srv/: GetCoverablePointsForEachWaypoint.srv  GetNuc.srv  GetRandomSurfacePoints.srv
benchmarking_3dcpp_rviz_plugin/: CMakeLists.txt  benchmarking_3dcpp_panel.xml  package.xml
benchmarking_3dcpp_rviz_plugin/include/benchmarking_3dcpp_rviz_plugin/: benchmarking_3dcpp_panel.hpp
benchmarking_3dcpp_rviz_plugin/src/: benchmarking_3dcpp_panel.cpp
config/: config.yaml  viz.yaml
include/benchmarking_3dcpp/: benchmarking_3dcpp.hpp  coverage_calculator.hpp  cpp_alg_core.hpp  input_types.hpp  robot_model.hpp  scene.hpp  surface_sampler.hpp  types.hpp
include/benchmarking_3dcpp/alg/: coverage_algorithm.hpp  nuc.hpp
include/benchmarking_3dcpp/cuda/: cuda_kernels.cuh
include/benchmarking_3dcpp/eval/: coverage_evaluator.hpp  surface_sampler.hpp
include/benchmarking_3dcpp/robot_model/: circular.hpp  line_lidar.hpp
include/benchmarking_3dcpp/utils/: h5_helper.hpp
include/benchmarking_3dcpp/viz/: benchmarking_viz.hpp
launch/: first.launch.py  viz.launch.py
output/: inspect_h5.py
src/: benchmarking_3dcpp.cpp  benchmarking_3dcpp_node.cpp  benchmarking_viz_node.cpp  coverage_calculator.cpp  cuda_kernels.cu  robot_model.cpp  surface_sampler.cpp
src/alg/: nuc.cpp
src/cuda/: cuda_kernels.cu
src/eval/: coverage_evaluator.cpp  surface_sampler.cpp
src/robot_model/: circular.cpp
src/viz/: benchmarking_viz.cpp
