<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>benchmarking_3dcpp_rviz_plugin</name>
  <version>0.0.0</version>
  <description>Benchmarking 3DCPP Visualization Panel (unfinished)</description>
  <maintainer email="tong.yang@zju.edu.cn">Tong Yang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
